Update repository methods with streams